--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Website with Tabs</title>
+    <title>srivatsavkoduri</title>
     <style>
         body { font-family: Arial, sans-serif; }
         .tabs { position: fixed; top: 0; width: 100%; background-color: #fff; padding: 10px; border-bottom: 1px solid #ccc; }
